# researcher

./: .env.example  .gitignore  Dockerfile  Dockerfile.frontend  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_creative_intelligence_and_pgvector.py  003_users_and_workspaces.py  004_performance_intelligence.py  005_approvals.py  006_research_inbox.py
app/: main.py
app/api/: deps.py
app/core/: config.py  events.py  permissions.py  security.py  startup_validation.py
app/db/: base.py  session.py
app/knowledge/: base_training.py  extraction_frameworks.py  primers.py  synthesizer.py
app/orchestrator/: autonomous.py  engine.py  scheduler.py
app/prompts/: systems.py
app/schemas/: account.py  approval.py  artifact.py  iteration.py  observation.py  offer.py  strategy.py  workflow.py
app/workers/: ad_analyzer.py  audience_psychology.py  base.py  brief_composer.py  competitor_monitor.py  compression_tax.py  copy_generator.py  copy_shape_police.py  coverage_matrix.py  creative_ingest.py  creative_loopback.py  creative_producer.py  cultural_pulse.py  differentiation.py  domain_research.py  headline_generator.py  voc_miner.py  (+16 more)
frontend/: .gitignore  package-lock.json  package.json
tests/: conftest.py  test_all_contracts.py  test_banks.py  test_engine.py  test_events.py  test_extractors.py  test_intelligence.py  test_knowledge.py  test_models.py  test_research_inbox.py  test_startup_validation.py  test_workers.py
(+115 files in other folders)
