[project]
name = "researcher"
version = "0.1.0"
description = "Hindsight-First Creative Strategy SaaS — converts raw market evidence into structured strategic assets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "anthropic>=0.42.0",
    "google-genai>=1.0.0",
    "openai>=1.60.0",
    "httpx>=0.28.0",
    "boto3>=1.35.0",
    "hindsight-sdk>=0.1.0",
    "playwright>=1.49.0",
    "openai-whisper>=20240930",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "yt-dlp>=2024.12.0",
    "python-multipart>=0.0.12",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "tenacity>=9.0.0",
    "scrapling[all]>=0.3.0",
    "scenedetect[opencv]>=0.6.0",
    "pgvector>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
